# AILearning

./: .gitignore  README.md  demo.py  ollama_demo.py  requirements.txt
ContextEngineering/: DOCUMENTATION.md  README.md  requirements.txt
KnowledgeBasePoC/: README.md
KnowledgeBasePoC/SRC/: README.md  cli.py  pyproject.toml
KnowledgeBasePoC/SRC/scripts/: create_schema.py
KnowledgeBasePoC/SRC/src/: __init__.py
KnowledgeBasePoC/SRC/src/adapters/: file_ingester.py  git_ingester.py  wiki_to_json.py
KnowledgeBasePoC/SRC/src/agent/: assembler.py  classifier.py  graph_retriever.py  pagindex.py  vector_retriever.py
KnowledgeBasePoC/SRC/src/api/: main.py  schemas.py
KnowledgeBasePoC/SRC/src/api/routes/: entities.py  ingest.py  query.py  stats.py
KnowledgeBasePoC/SRC/src/knowledge_base.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
KnowledgeBasePoC/SRC/src/mcp/: server.py
KnowledgeBasePoC/SRC/src/models/: __init__.py  facts.py
KnowledgeBasePoC/SRC/src/pipeline/: __init__.py  chunker.py  extractor.py  hydrator.py  job_manager.py  resolver.py  walker.py
KnowledgeBasePoC/SRC/src/storage/: __init__.py  chroma_store.py  git_store.py  kuzu_store.py  neo4j_store.py  protocols.py
KnowledgeBasePoC/SRC/tests/: __init__.py  conftest.py  test_chunker.py  test_extractor.py  test_query.py  test_resolver.py
MedicalConsultationAgents/: README.md
MultiAgentOrchestrator/: GETTING_STARTED.md  README.md  TEMPLATES_LOCATION.md  __init__.py  main.py  requirements.txt
RAG/src/: README.md  (+6 more)
agentRegistry/: README.md
apacheRay/: README.md
chatGptReplica/: README.md  ollama_client.py  persistence.py  server.py  simple_inspect.py
mem0_agent/: README.md  main.py  output.txt  output_v2.txt  requirements.txt  test_run.py
(+122 files in other folders)
